--- a/docs/api/products/public-product-api.info.mdx
+++ b/docs/api/products/public-product-api.info.mdx
@@ -1,10 +1,10 @@
 ---
 id: public-product-api
-title: "Public Product API"
+title: Public Product API
 description: "APIs that can be accessed by platforms"
-sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
+custom_edit_url: "https://github.com/ShopBonsai/docs/issues/new?labels=documentation&title=[Documentation] Requesting changes to 'Public Product API' (public-product-api)"
 ---
 
 import ApiLogo from "@theme/ApiLogo";
@@ -14,6 +14,8 @@ import Export from "@theme/ApiDemoPanel/Export";
 
 <span className={"theme-doc-version-badge badge badge--secondary"}>Version: 2.7.11</span>
 
+<Export url={"https://raw.githubusercontent.com/ShopBonsai/docs/main/spec/products.json"} proxy={undefined}></Export>
+
 # Public Product API
 
 
@@ -21,4 +23,3 @@ import Export from "@theme/ApiDemoPanel/Export";
 APIs that can be accessed by platforms
 
 <div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
-      
