--- a/docs/api/orders/orders-api.info.mdx
+++ b/docs/api/orders/orders-api.info.mdx
@@ -1,10 +1,10 @@
 ---
 id: orders-api
-title: "Orders API"
+title: Orders API
 description: "Defines the APIs that are accessed by External Stores"
-sidebar_label: Introduction
 sidebar_position: 0
 hide_title: true
+custom_edit_url: "https://github.com/ShopBonsai/docs/issues/new?labels=documentation&title=[Documentation] Requesting changes to 'Orders API' (orders-api)"
 ---
 
 import ApiLogo from "@theme/ApiLogo";
@@ -14,6 +14,8 @@ import Export from "@theme/ApiDemoPanel/Export";
 
 <span className={"theme-doc-version-badge badge badge--secondary"}>Version: 1.21.41</span>
 
+<Export url={"https://raw.githubusercontent.com/ShopBonsai/docs/main/spec/orders.json"} proxy={undefined}></Export>
+
 # Orders API
 
 
@@ -21,4 +23,3 @@ import Export from "@theme/ApiDemoPanel/Export";
 Defines the APIs that are accessed by External Stores
 
 <div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
-      
