--- a/docs/api/orders/submit-orders.api.mdx
+++ b/docs/api/orders/submit-orders.api.mdx
@@ -1,13 +1,14 @@
 ---
 id: submit-orders
-title: "Submit Orders"
+title: Submit Orders
 description: "Submits an order."
-sidebar_label: "Submit Orders"
+sidebar_label: Submit Orders
 hide_title: true
 hide_table_of_contents: true
 api: {"tags":["Orders"],"requestBody":{"content":{"application/json":{"schema":{"type":"object","required":["customer","products","shipping_address","payment"],"properties":{"customer_id":{"type":"string","nullable":true,"description":"Unique customer identifier.","example":"7513594"},"customer":{"type":"object","required":["email","first_name","last_name"],"properties":{"email":{"type":"string","format":"email","description":"Customer email address. We will be using this email to update the customer about their order","example":"bob_bobsen@gmail.com"},"first_name":{"type":"string","description":"Customer first name.","example":"Bob"},"last_name":{"type":"string","description":"Customer last name.","example":"Bobsen"}}},"products":{"type":"array","minItems":1,"items":{"type":"object","required":["public_id","variant_id","quantity"],"properties":{"public_id":{"type":"string","description":"Public ID of the product","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234 - M - Black"},"price":{"type":"number","format":"float","description":"Price for specific product.","example":12},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant in the cart","example":2}}}},"shipping_address":{"type":"object","required":["first_name","last_name","address1","city","country","zip"],"properties":{"first_name":{"type":"string","description":"Customer first name.","example":"Bob"},"last_name":{"type":"string","description":"Customer last name.","example":"Bobsen"},"address1":{"type":"string","description":"The street address of the shipping address.","example":"123 Amoebobacterieae St"},"address2":{"type":"string","nullable":true,"description":"An optional additional field for the street address of the shipping address.","example":"Unit 718"},"city":{"type":"string","description":"The city, town, or village of the shipping address.","example":"Ottawa"},"country":{"type":"string","description":"The two-letter code (ISO 3166-1 format) for the country of the shipping address.","example":"CA"},"name":{"type":"string","description":"Full name.","example":"Bob Bobsen"},"province":{"type":"string","nullable":true,"description":"The two-letter abbreviation of the region of the shipping address.","example":"ON"},"phone":{"type":"string","description":"The phone number at the shipping address.","example":"555-625-1199"},"zip":{"type":"string","description":"The postal code (zip, postcode, Eircode, …) of the shipping address.","example":"K2P0V6"}}},"payment":{"type":"object","required":["method","token"],"properties":{"method":{"type":"string","enum":["credit card","afterpay","external payment"],"description":"Payment method used to pay for the order.","example":"credit card"},"token":{"type":"string","description":"Stripe token for the payment","example":"tok_1EVLbG2eZvKYlo2CcGapaqW9"},"amounts":{"type":"object","required":["shipping","taxes","goods"],"properties":{"shipping":{"type":"number","format":"float"},"taxes":{"type":"number","format":"float"},"goods":{"type":"number","format":"float"}}}}},"misc":{"type":"object","properties":{"data":{"type":"object","properties":{}}}}}}}},"required":true},"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"type":"object","required":["customer"],"properties":{"marketing":{"type":"object","properties":{"buyer_accepts_marketing":{"type":"boolean"}}},"customer":{"type":"object","required":["email","first_name","last_name"],"properties":{"email":{"type":"string","format":"email","description":"Customer email address. We will be using this email to update the customer about their order","example":"bob_bobsen@gmail.com"},"first_name":{"type":"string","description":"Customer first name.","example":"Bob"},"last_name":{"type":"string","description":"Customer last name.","example":"Bobsen"}}},"financial_status":{"type":"string","enum":["authorized","paid","partially_paid","partially_refunded","pending","voided"],"nullable":true,"description":"Financial status of order.","example":"authorized"},"fulfillment_status":{"type":"string","enum":["pending","fulfilled","Partially Fulfilled","cancelled","sent to merchant","failed (merchant)","failed (unknown)","failed (payment)","cancelled (payment)","failed (payment validation)","payment successful","failed (inventory)","failed (inventory - related)"],"nullable":true,"description":"Whether order has been fulfilled.","example":"fulfilled"},"email":{"type":"string","format":"email","description":"Email of the customer","example":"bob_bobsen@gmail.com"},"shipping_address":{"type":"object","required":["first_name","last_name","address1","city","country","zip"],"properties":{"first_name":{"type":"string","description":"Customer first name.","example":"Bob"},"last_name":{"type":"string","description":"Customer last name.","example":"Bobsen"},"address1":{"type":"string","description":"The street address of the shipping address.","example":"123 Amoebobacterieae St"},"address2":{"type":"string","nullable":true,"description":"An optional additional field for the street address of the shipping address.","example":"Unit 718"},"city":{"type":"string","description":"The city, town, or village of the shipping address.","example":"Ottawa"},"country":{"type":"string","description":"The two-letter code (ISO 3166-1 format) for the country of the shipping address.","example":"CA"},"name":{"type":"string","description":"Full name.","example":"Bob Bobsen"},"province":{"type":"string","nullable":true,"description":"The two-letter abbreviation of the region of the shipping address.","example":"ON"},"phone":{"type":"string","description":"The phone number at the shipping address.","example":"555-625-1199"},"zip":{"type":"string","description":"The postal code (zip, postcode, Eircode, …) of the shipping address.","example":"K2P0V6"}}},"shipping_lines":{"type":"object","required":["title","code","price","source"],"properties":{"title":{"type":"string","description":"The title of the shipping method.","example":"Small Packet International Air"},"code":{"type":"string","description":"A reference to the shipping method.","example":"INT.TP"},"price":{"type":"number","format":"float","description":"The price of this shipping method in the shop currency. Can not be negative.","example":20},"source":{"type":"string","description":"The source of the shipping method.","example":"canada_post"},"tax":{"type":"number","format":"float","nullable":true,"description":"Taxes for a specific shipping line.","example":12.45}}},"duties_lines":{"type":"object","properties":{"title":{"type":"string","description":"Specific type of duties","example":"FL county duty"},"price":{"type":"number","format":"float","description":"Amount for duties.","example":12.45},"currency":{"type":"string","description":"The three-letter code (ISO 4217 format) for the shop currency.","example":"CAD"}}},"metafields":{"type":"array","items":{"type":"object","properties":{"key":{"type":"string","description":"The name of the metafield.","example":"warehouse"},"value":{"type":"string","description":"The information to be stored as metadata.","example":"25"},"value_type":{"type":"string","description":"The metafield information type. Valid values: string, integer, json_string.","example":"integer"},"namespace":{"type":"string","description":"A container for a set of metafields.","example":"inventory"}}}},"line_items":{"type":"array","items":{"type":"object","required":["name","product_id","variant_id","public_id","price","quantity","requires_shipping"],"properties":{"name":{"type":"string","description":"The title of the product.","example":"Nike Air Jordan"},"product_id":{"type":"string","description":"Unique product identifier.","example":"7513594"},"variant_sku":{"type":"string","nullable":true,"description":"variant sku.","example":"7513594"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"4264112"},"public_id":{"type":"string","description":"Public id of line item.","example":"cjld2cyuq0000t3rmniod1foy"},"price":{"type":"number","format":"float","description":"The price of the item before discounts have been applied in the shop currency.","example":10},"quantity":{"type":"number","format":"float","description":"The number of items that were purchased.","example":1},"requires_shipping":{"type":"boolean","description":"Indicate whether product requires shipping.","example":true},"properties":{"type":"object","properties":{"name":{"type":"string","description":"Name of product property.","example":"custom engraving"},"value":{"type":"string","description":"Value of product property.","example":"Happy Birthday Mom!"}}}}}},"currency":{"type":"string","description":"The three-letter code (ISO 4217 format) for the shop currency.","example":"CAD"},"public_id":{"type":"string","description":"Public id of customer order.","example":"cjld2cyuq0000t3rmniod1foy"},"note_attributes":{"type":"array","items":{"type":"object","properties":{"name":{"type":"string","description":"Unique name for order note.","example":"remark"},"value":{"type":"string","description":"Actual note value.","example":"Customer changed their mind."}}}},"token":{"type":"string","description":"A unique token for the order.","example":"b1946ac92492d2347c6235b4d2611184"},"discount_codes":{"type":"array","items":{"type":"object","properties":{"amount":{"type":"number","format":"float","description":"Discount amount.","example":12},"type":{"type":"string","description":"Discount type.","example":"fixed_amount"},"code":{"type":"string","description":"The discount code that customers use at checkout.","example":"SUMMERSALE10OFF"}}}},"merchant_revenue":{"type":"number","format":"float","description":"Merchant revenue.","example":17.98},"total_tax":{"type":"number","format":"float","description":"Total amount of taxes to be paid.","example":12.25},"raw_order":{"description":"Original order details.","example":"{ _id: ... }"},"merchant_country":{"type":"string","description":"The merchant country.","example":"CA"},"partner_id":{"type":"string","description":"This is the public ID of the partner that the sale will be attributed to.","example":"ck865cyk00000xlzo0ftpawme"},"incrementalId":{"type":"number","format":"float","description":"Send an order number if needed.","example":25465},"billing_address":{"type":"object","required":["first_name","last_name","address1","city","country","zip"],"properties":{"first_name":{"type":"string","description":"Customer first name.","example":"Bob"},"last_name":{"type":"string","description":"Customer last name.","example":"Bobsen"},"address1":{"type":"string","description":"The street address of the shipping address.","example":"123 Amoebobacterieae St"},"address2":{"type":"string","nullable":true,"description":"An optional additional field for the street address of the shipping address.","example":"Unit 718"},"city":{"type":"string","description":"The city, town, or village of the shipping address.","example":"Ottawa"},"country":{"type":"string","description":"The two-letter code (ISO 3166-1 format) for the country of the shipping address.","example":"CA"},"name":{"type":"string","description":"Full name.","example":"Bob Bobsen"},"province":{"type":"string","nullable":true,"description":"The two-letter abbreviation of the region of the shipping address.","example":"ON"},"phone":{"type":"string","description":"The phone number at the shipping address.","example":"555-625-1199"},"zip":{"type":"string","description":"The postal code (zip, postcode, Eircode, …) of the shipping address.","example":"K2P0V6"}}}}}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"405":{"description":"405 - Validation exception"},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Submits an order.","method":"post","path":"/submit","servers":[{"url":"//api.shopbonsai.ca/orders"}],"jsonRequestBodyExample":{"customer_id":"7513594","customer":{"email":"bob_bobsen@gmail.com","first_name":"Bob","last_name":"Bobsen"},"products":[{"public_id":"cjld2cyuq0000t3rmniod1foy","variant_id":"1234 - M - Black","price":12,"quantity":2}],"shipping_address":{"first_name":"Bob","last_name":"Bobsen","address1":"123 Amoebobacterieae St","address2":"Unit 718","city":"Ottawa","country":"CA","name":"Bob Bobsen","province":"ON","phone":"555-625-1199","zip":"K2P0V6"},"payment":{"method":"credit card","token":"tok_1EVLbG2eZvKYlo2CcGapaqW9","amounts":{"shipping":0,"taxes":0,"goods":0}},"misc":{"data":{}}},"info":{"title":"Orders API","description":"Defines the APIs that are accessed by External Stores","version":"1.21.41","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Submit Orders","description":{"content":"Submits an order.","type":"text/plain"},"url":{"path":["submit"],"host":["{{baseUrl}}"],"query":[],"variable":[]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
 sidebar_class_name: "post api-method"
 info_path: docs/api/orders/orders-api
+custom_edit_url: "https://github.com/ShopBonsai/docs/issues/new?labels=documentation&title=[Documentation] Requesting changes to 'Submit Orders' (submit-orders)"
 ---
 
 import ApiTabs from "@theme/ApiTabs";
@@ -54,4 +55,3 @@ Success
 500 - Unknown error
 
 </div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"status"} required={false} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"detail"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"status\": 500,\n      \"detail\": \"\",\n      \"title\": \"Unknown error\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div>
-      
