--- a/docs/api/orders/orders-api.info.mdx
+++ b/docs/api/orders/orders-api.info.mdx
@@ -2,9 +2,9 @@
 id: orders-api
 title: "Orders API"
 description: "Defines the APIs that are accessed by External Stores"
-sidebar_label: Introduction
-sidebar_position: 0
+sidebar_label: "Orders API"
 hide_title: true
+custom_edit_url: null
 ---
 
 import ApiLogo from "@theme/ApiLogo";
@@ -23,4 +23,11 @@ import Export from "@theme/ApiDemoPanel/Export";
 Defines the APIs that are accessed by External Stores
 
 <div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
+
+```mdx-code-block
+import DocCardList from '@theme/DocCardList';
+import {useCurrentSidebarCategory} from '@docusaurus/theme-common';
+
+<DocCardList items={useCurrentSidebarCategory().items}/>
+```
       
