--- a/docs/api/products/public-product-api.info.mdx
+++ b/docs/api/products/public-product-api.info.mdx
@@ -2,9 +2,9 @@
 id: public-product-api
 title: "Public Product API"
 description: "APIs that can be accessed by platforms"
-sidebar_label: Introduction
-sidebar_position: 0
+sidebar_label: "Public Product API"
 hide_title: true
+custom_edit_url: null
 ---
 
 import ApiLogo from "@theme/ApiLogo";
@@ -23,4 +23,11 @@ import Export from "@theme/ApiDemoPanel/Export";
 APIs that can be accessed by platforms
 
 <div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
+
+```mdx-code-block
+import DocCardList from '@theme/DocCardList';
+import {useCurrentSidebarCategory} from '@docusaurus/theme-common';
+
+<DocCardList items={useCurrentSidebarCategory().items}/>
+```
       
