--- a/docs/api/products/get-products.api.mdx
+++ b/docs/api/products/get-products.api.mdx
@@ -5,7 +5,7 @@ description: "Returns an array of products by ids."
 sidebar_label: "Get Products"
 hide_title: true
 hide_table_of_contents: true
-api: {"tags":["Products"],"parameters":[{"in":"query","name":"ids","schema":{"type":"string"}},{"in":"query","name":"shortLinks","schema":{"type":"string"}},{"in":"query","name":"currency","description":"Currency code","example":"USD","schema":{"type":"string"}}],"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"type":"object","properties":{"data":{"type":"array","items":{"type":"object","required":["currency"],"properties":{"ids":{"type":"string"},"shortLinks":{"type":"string"},"currency":{"type":"string","description":"Currency code","example":"USD"}}}},"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title","meta"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":400},"code":{"type":"string","description":"Unique code for specific error.","example":"USER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Error occured trying to create a new order"},"meta":{"description":"Actual error containing stack trace and other properties.","example":"{ stack: ... }"}}}}}}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"405":{"description":"405 - Validation exception"},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Returns an array of products by ids.","method":"get","path":"/","servers":[{"url":"https://api.shopbonsai.ca/products"}],"info":{"title":"Public Product API","description":"APIs that can be accessed by platforms","version":"2.7.11","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Get Products","description":{"content":"Returns an array of products by ids.","type":"text/plain"},"url":{"path":[""],"host":["{{baseUrl}}"],"query":[{"disabled":false,"key":"ids","value":""},{"disabled":false,"key":"shortLinks","value":""},{"disabled":false,"description":{"content":"Currency code","type":"text/plain"},"key":"currency","value":""}],"variable":[]},"header":[{"key":"Accept","value":"application/json"}],"method":"GET"}}
+api: {"tags":["Products"],"parameters":[{"in":"query","name":"ids","schema":{"type":"string"}},{"in":"query","name":"shortLinks","schema":{"type":"string"}},{"in":"query","name":"currency","description":"Currency code","example":"USD","schema":{"type":"string"}}],"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"type":"object","properties":{"data":{"type":"array","items":{"type":"object","required":["currency"],"properties":{"ids":{"type":"string"},"shortLinks":{"type":"string"},"currency":{"type":"string","description":"Currency code","example":"USD"}}}},"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title","meta"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":400},"code":{"type":"string","description":"Unique code for specific error.","example":"USER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Error occured trying to create a new order"},"meta":{"description":"Actual error containing stack trace and other properties.","example":"{ stack: ... }"}}}}}}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"405":{"description":"405 - Validation exception"},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Returns an array of products by ids.","method":"get","path":"/","servers":[{"url":"https://api.shopbonsai.ca/products"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Public Product API","description":"APIs that can be accessed by platforms","version":"2.7.11","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Get Products","description":{"content":"Returns an array of products by ids.","type":"text/plain"},"url":{"path":[""],"host":["{{baseUrl}}"],"query":[{"disabled":false,"key":"ids","value":""},{"disabled":false,"key":"shortLinks","value":""},{"disabled":false,"description":{"content":"Currency code","type":"text/plain"},"key":"currency","value":""}],"variable":[]},"header":[{"key":"Accept","value":"application/json"}],"method":"GET"}}
 sidebar_class_name: "get api-method"
 info_path: docs/api/products/public-product-api
 ---
