--- a/docs/express-checkout/index.mdx
+++ b/docs/express-checkout/index.mdx
@@ -10,16 +10,20 @@ To use the Express Checkout service, customers simply need to navigate to Expres
 
 The Express Checkout service requires that the `productId` and `variantId` of the product being purchased be passed as query parameters in the URL. These parameters are used to identify the specific product and variant that the customer is purchasing.
 
+:::info
+Your `API key` will be shared with you by your account manager.
+:::
+
 ## Example
+
+_Fill in the required fields to generate Express Checkout URL._
 
 import { ExpressCheckoutUrl } from '@site/src/components/ExpressUrl'
 
 <ExpressCheckoutUrl />
 
 
-
-
-Once the Express Checkout process has been initiated, the customer will be redirected to the checkout page, where they can enter their payment and shipping information and complete their purchase.
+Generated Express Checkout URL can be used to link from the product page's CTA directly to Express Checkout. The customer will be redirected to the checkout page, where they can enter their payment and shipping information and complete their purchase.
 
 Overall, the Express Checkout service is a convenient and efficient way for customers to purchase a single product from Bonsai, and is an important part of the company's e-commerce offering.
 
