--- a/docs/express-checkout/index.mdx
+++ b/docs/express-checkout/index.mdx
@@ -25,6 +25,6 @@ import { ExpressCheckoutUrl } from '@site/src/components/ExpressUrl'
 
 Generated Express Checkout URL can be used to link from the product page's CTA directly to Express Checkout. The customer will be redirected to the checkout page, where they can enter their payment and shipping information and complete their purchase.
 
-Overall, the Express Checkout service is a convenient and efficient way for customers to purchase a single product from Bonsai, and is an important part of the company's e-commerce offering.
+Overall, the Express Checkout service is a convenient and efficient way for customers to purchase a single product from Bonsai, and is an important part of the Bonsai e-commerce offering.
 
 
