--- a/docs/api/orders/orders-api.info.mdx
+++ b/docs/api/orders/orders-api.info.mdx
@@ -18,9 +18,25 @@ import Export from "@theme/ApiDemoPanel/Export";
 
 # Orders API
 
-
-
 APIs used for interacting with orders.
+
+There are a few types of integration with the Bonsai Order API depending on who owns the payments.
+
+## Bonsai owns the payment
+
+### Native Checkout experience
+
+During the checkout process, the customer is redirected to Bonsai to complete the payment and complete the order processing.
+
+### API integrated checkout experience
+
+The account is creating their own checkout experience but are leveraging our endpoints to collect payments and complete the order processing.
+Please contact our team to provide you with all you need to get started.
+
+## Account owns the payment
+
+If the account is owning the payment, they will need to use the payment method `external payment` to submit the order.
+Once the order is submitted, our team will fulfill and Bonsai will invoice you later on the order amount based on our agreement.
 
 <div style={{"marginBottom":"2rem"}}><h2 id={"authentication"} style={{"marginBottom":"1rem"}}>Authentication</h2><Tabs><TabItem label={"API Key"} value={"APIKeyHeader"}><div><table><tbody><tr><th>Security Scheme Type:</th><td>apiKey</td></tr><tr><th>Header parameter name:</th><td>API-Key</td></tr></tbody></table></div></TabItem></Tabs></div><div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
 
@@ -30,4 +46,3 @@ import {useCurrentSidebarCategory} from '@docusaurus/theme-common';
 
 <DocCardList items={useCurrentSidebarCategory().items}/>
 ```
-      
