--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -5,21 +5,22 @@ description: Learn how to integrate with the Bonsai API.
 
 # Bonsai API
 
-The Bonsai REST API allows you to fetch products, calculate cart totals, submit orders, and fetch order status,
-including fulfillment details and refunds. This section provides information on how to use the API.
+The Bonsai API is a REST API that allows you to fetch products, calculate cart totals, submit orders,
+and fetch order status, including fulfillment details and refunds. This section provides information on
+how to use the API.
 
 ## Endpoints
 
-It has predictable resource-oriented URLs, accepts JSON-encoded request bodies, returns JSON-encoded
+The Bonsai API has predictable resource-oriented URLs, accepts JSON-encoded request bodies, returns JSON-encoded
 responses, and uses standard HTTP response codes. It supports cross-origin resource sharing, allowing
 you to interact securely with our API from a client-side web application.
 
 ## Versioning
 
-Breaking changes are handled by prefixing URLs with version numbers (ex. `/v2`). These prefixes ensure
+Breaking changes are handled by prefixing URLs with version numbers (ex. `/v2/`). These prefixes ensure
 that new features or other improvements do not impact your existing implementation.
 
-As of February 14th, 2023, Bonsai has released net new endpoints with the `/v2` prefix. These routes
+As of February 14th, 2023, Bonsai has released net new endpoints with the `/v2/` prefix. These routes
 follow new guidelines to make the API more consistent and predictable for you.
 
 Bonsai will continue to support old endpoints and may later port these over to simultaneously be
