--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -20,12 +20,11 @@ you to interact securely with our API from a client-side web application.
 Breaking changes are handled by prefixing URLs with version numbers (ex. `/v2/`). These prefixes ensure
 that new features or other improvements do not impact your existing implementation.
 
-As of February 14th, 2023, Bonsai has released net new endpoints with the `/v2/` prefix. These routes
+As of February 14th, 2023, Bonsai has released net new endpoints with the `/v2/` prefix. These endpoints
 follow new guidelines to make the API more consistent and predictable for you.
 
-Bonsai will continue to support old endpoints and may later port these over to simultaneously be
-available in the prefixed versions. Bonsai will announce any deprecated endpoints well in advance
-of their removal.
+Bonsai will continue to support old endpoints and may later convert these over to the same format as
+available under `/v2/`. Bonsai will announce any deprecated endpoints well in advance of their removal.
 
 ## Authentication
 
