add correct JS/CSS assets

--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -77,12 +77,12 @@ Add the Bonsai Checkout dependencies to `Checkout page`:
 ```html title="checkout.html"
 <head>
   <!-- Bonsai Checkout CSS -->
-  <link rel="stylesheet" href="TODO" />
+  <link rel="stylesheet" href="https://ui.getbonsai.com/index.css" />
 </head>
 
 <body>
   <!-- Bonsai Checkout JS -->
-  <script data-bonsai-partner-id="YOUR_API_KEY" src="TODO"></script>
+  <script data-bonsai-partner-id="YOUR_API_KEY" src="https://ui.getbonsai.com/index.js"></script>
 </body>
 ```
 
