--- a/docs/bonsai-ui/introduction.mdx
+++ b/docs/bonsai-ui/introduction.mdx
@@ -4,7 +4,7 @@ description: Learn how to use Bonsai UI
 sidebar_position: 1
 ---
 
-`Bonsai UI` is a suite of Javascript tools that enables product checkout using the Bonsai platform.
+`Bonsai UI` is a suite of Javascript tools enabling product checkout using the Bonsai platform.
 
 Currently, we support the following integrations:
 
