--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -21,7 +21,7 @@ Each one of these integrations has its own advantages and disadvantages, and you
 This integration enables you to run checkout process on your domain.
 This is the recommended way to integrate.
 
-You can obtain `order` information after a successful checkout, or an `error` in case of a failure, through _callbacks_.
+You can obtain `order` information after a successful checkout or an `error` in case of a failure through _callbacks_, explained in the following sections.
 We will explain how to do this in the following sections.
 
 ### Query parameters
