--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -44,7 +44,7 @@ https://your.domain.com/checkout?bonsai=checkout_abcdef&onSuccess=yourSuccessFn&
 ### Callbacks
 
 Callbacks are optional, and you can use them to obtain `order` information after a successful checkout, or an `error` in case of a failure.
-These function must be assigned to `window` object, and they will be called with `order` or `error` object as their first argument.
+These functions must be assigned to `window` object and called with `order` or `error` object as their first argument.
 
 :::info Example
 
