--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -61,7 +61,7 @@ window.yourErrorFn = function (error) {
 :::
 
 :::caution
-It's important that the names of the callback functions match the names provided in the `onSuccess` and `onError` query parameters.
+The callback functions' names must match those provided in the `onSuccess` and `onError` query parameters.
 :::
 
 ### Step 1: Create a page
