address PR suggestions

--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -12,14 +12,13 @@ integrating it with your website.
 There are 2 ways to integrate with Bonsai Checkout:
 
 1. `Embedded` - embedding the Bonsai Checkout in your website
-2. `Hosted` - redirecting to secure Bonsai Checkout URL
+2. `Hosted` - redirecting to a secure Bonsai Checkout URL
 
-Each one of these integrations has its own advantages and disadvantages, and you should choose the one that fits your needs.
+Each of these integrations has its advantages and disadvantages, and you should choose the one that fits your needs.
 
 ## Embedded
 
-This integration enables you to run checkout process on your domain.
-This is the recommended way to integrate.
+This integration enables you to run the checkout process on your domain.
 
 You can obtain `order` information after a successful checkout or an `error` in case of a failure through _callbacks_, explained in the following sections.
 
