Update cart to carts

--- a/docs/api/carts/carts-api.info.mdx
+++ b/docs/api/carts/carts-api.info.mdx
@@ -1,8 +1,8 @@
 ---
-id: cart-api
-title: "Cart API"
+id: carts-api
+title: "Carts API"
 description: "API for creating, reading, updating, and deleting carts."
-sidebar_label: "Cart API"
+sidebar_label: "Carts API"
 hide_title: true
 custom_edit_url: null
 ---
@@ -16,7 +16,7 @@ import Export from "@theme/ApiDemoPanel/Export";
 
 <Export url={"https://raw.githubusercontent.com/ShopBonsai/docs/main/spec/carts.json"} proxy={undefined}></Export>
 
-# Cart API
+# Carts API
 
 
 
