--- a/docs/api/carts/add-product-to-cart.api.mdx
+++ b/docs/api/carts/add-product-to-cart.api.mdx
@@ -5,9 +5,9 @@ description: "Add product to cart."
 sidebar_label: "Add product to cart."
 hide_title: true
 hide_table_of_contents: true
-api: {"description":"Add product to cart.","parameters":[{"description":"Cart id","example":"9597879817","in":"path","name":"id","required":true,"schema":{"type":"string"}}],"requestBody":{"$ref":"#/components/requestBodies/8ebq75ym3input"},"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"properties":{"id":{"description":"Unique identifier for the cart","example":"cjzyvxtm207z4rns56tif8job","type":"string"},"products":{"description":"Product identifiers for the cart.","items":{"properties":{"id":{"description":"Product ID.","example":"clad6pg5z00eu012gfz7hfm92","type":"string"},"quantity":{"description":"Quantity of the product variant.","example":1,"format":"float","minimum":1,"type":"number"},"variantId":{"description":"The ID of the product variant.","example":"M00679529706740","type":"string"}},"required":["id","variantId","quantity"],"type":"object"},"type":"array"}},"required":["products","id"],"type":"object"},"errors":{"items":{"properties":{"code":{"description":"Unique code for specific error.","example":"USER_NOT_FOUND","type":"string"},"id":{"description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000","type":"string"},"status":{"description":"HTTP status code.","example":400,"format":"float","type":"number"},"title":{"description":"Short description what the error entails.","example":"Error occurred trying to create a new order","type":"string"}},"required":["id","status","code","title"],"type":"object"},"type":"array"}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"description":"Provided input is invalid","properties":{"errors":{"items":{"example":{"detail":"","status":400,"title":"Bad input request"},"properties":{"detail":{"example":"Fatal issue","nullable":true,"type":"string"},"status":{"example":500,"format":"float","type":"number"},"title":{"example":"Unknown error","type":"string"}},"required":["status","detail","title"],"type":"object"},"type":"array"}},"type":"object"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"description":"Authentication information is missing or invalid","properties":{"errors":{"items":{"example":{"detail":"","status":401,"title":"Authentication information is missing or invalid"},"properties":{"detail":{"example":"Fatal issue","nullable":true,"type":"string"},"status":{"example":500,"format":"float","type":"number"},"title":{"example":"Unknown error","type":"string"}},"required":["status","detail","title"],"type":"object"},"type":"array"}},"type":"object"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"description":"Not Found","properties":{"errors":{"items":{"example":{"detail":"","status":404,"title":"Not Found"},"properties":{"detail":{"example":"Fatal issue","nullable":true,"type":"string"},"status":{"example":500,"format":"float","type":"number"},"title":{"example":"Unknown error","type":"string"}},"required":["status","detail","title"],"type":"object"},"type":"array"}},"type":"object"}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"description":"Unknown error","properties":{"errors":{"items":{"example":{"detail":"","status":500,"title":"Unknown error"},"properties":{"detail":{"example":"Fatal issue","nullable":true,"type":"string"},"status":{"example":500,"format":"float","type":"number"},"title":{"example":"Unknown error","type":"string"}},"required":["status","detail","title"],"type":"object"},"type":"array"}},"type":"object"}}}}},"tags":["cart"],"method":"patch","path":"/{id}/addProduct","servers":[{"url":"https://api.shopbonsai.ca/carts"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"in":"header","name":"API-Key","type":"apiKey"}},"info":{"contact":{"email":"developers@shopbonsai.ca"},"description":"API for creating, reading, updating, and deleting carts.","title":"Cart API","version":"0.8.30"},"postman":{"name":"Add product to cart.","description":{"content":"Add product to cart.","type":"text/plain"},"url":{"path":[":id","addProduct"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Cart id","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"PATCH","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
+api: {"tags":["cart"],"parameters":[{"in":"path","name":"id","required":true,"description":"Cart id","example":"9597879817","schema":{"type":"string"}}],"requestBody":{"$ref":"#/components/requestBodies/Lf0kgyrezinput"},"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"type":"object","properties":{"data":{"type":"object","required":["products","id"],"properties":{"products":{"type":"array","items":{"type":"object","required":["id","variantId","quantity"],"properties":{"id":{"type":"string","description":"Product ID.","example":"clad6pg5z00eu012gfz7hfm92"},"variantId":{"type":"string","description":"The ID of the product variant.","example":"M00679529706740"},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant.","example":1}}},"description":"Product identifiers for the cart."},"id":{"type":"string","description":"Unique identifier for the cart","example":"cjzyvxtm207z4rns56tif8job"}}},"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":400},"code":{"type":"string","description":"Unique code for specific error.","example":"USER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Error occurred trying to create a new order"}}}}}}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Add product to cart.","method":"patch","path":"/{id}/addProduct","servers":[{"url":"https://api.shopbonsai.ca/carts"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Carts API","description":"API for creating, reading, updating, and deleting carts.","version":"0.8.30","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Add product to cart.","description":{"content":"Add product to cart.","type":"text/plain"},"url":{"path":[":id","addProduct"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Cart id","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"PATCH","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
 sidebar_class_name: "patch api-method"
-info_path: docs/api/carts/cart-api
+info_path: docs/api/carts/carts-api
 custom_edit_url: null
 ---
 
@@ -26,29 +26,29 @@ import TabItem from "@theme/TabItem";
 
 Add product to cart.
 
-<details style={{"marginBottom":"1rem"}} data-collapsed={false} open={true}><summary style={{}}><strong>Path Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"description":"Cart id","example":"9597879817","in":"path","name":"id","required":true,"schema":{"type":"string"}}}></ParamsItem></ul></div></details><div><ApiTabs><TabItem label={"200"} value={"200"}><div>
+<details style={{"marginBottom":"1rem"}} data-collapsed={false} open={true}><summary style={{}}><strong>Path Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"in":"path","name":"id","required":true,"description":"Cart id","example":"9597879817","schema":{"type":"string"}}}></ParamsItem></ul></div></details><div><ApiTabs><TabItem label={"200"} value={"200"}><div>
 
 Success
 
-</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>data</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={false} deprecated={undefined} schemaDescription={"Unique identifier for the cart"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>products</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>
+</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>data</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>products</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>
 
 Product identifiers for the cart.
 
-</div><SchemaItem collapsible={false} name={"id"} required={false} deprecated={undefined} schemaDescription={"Product ID."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"quantity"} required={false} deprecated={undefined} schemaDescription={"Quantity of the product variant."} schemaName={"float"} qualifierMessage={"**Possible values:** `>= 1`"} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"variantId"} required={false} deprecated={undefined} schemaDescription={"The ID of the product variant."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"code"} required={false} deprecated={undefined} schemaDescription={"Unique code for specific error."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"id"} required={false} deprecated={undefined} schemaDescription={"Unique identifier for error. Can be used for tracing across services."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={"HTTP status code."} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={"Short description what the error entails."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"data\": {\n    \"id\": \"cjzyvxtm207z4rns56tif8job\",\n    \"products\": [\n      {\n        \"id\": \"clad6pg5z00eu012gfz7hfm92\",\n        \"quantity\": 1,\n        \"variantId\": \"M00679529706740\"\n      }\n    ]\n  },\n  \"errors\": [\n    {\n      \"code\": \"USER_NOT_FOUND\",\n      \"id\": \"123e4567-e89b-12d3-a456-426655440000\",\n      \"status\": 400,\n      \"title\": \"Error occurred trying to create a new order\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"400"} value={"400"}><div>
+</div><SchemaItem collapsible={false} name={"id"} required={false} deprecated={undefined} schemaDescription={"Product ID."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"variantId"} required={false} deprecated={undefined} schemaDescription={"The ID of the product variant."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"quantity"} required={false} deprecated={undefined} schemaDescription={"Quantity of the product variant."} schemaName={"float"} qualifierMessage={"**Possible values:** `>= 1`"} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"id"} required={false} deprecated={undefined} schemaDescription={"Unique identifier for the cart"} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={false} deprecated={undefined} schemaDescription={"Unique identifier for error. Can be used for tracing across services."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={"HTTP status code."} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"code"} required={false} deprecated={undefined} schemaDescription={"Unique code for specific error."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={"Short description what the error entails."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"data\": {\n    \"products\": [\n      {\n        \"id\": \"clad6pg5z00eu012gfz7hfm92\",\n        \"variantId\": \"M00679529706740\",\n        \"quantity\": 1\n      }\n    ],\n    \"id\": \"cjzyvxtm207z4rns56tif8job\"\n  },\n  \"errors\": [\n    {\n      \"id\": \"123e4567-e89b-12d3-a456-426655440000\",\n      \"status\": 400,\n      \"code\": \"USER_NOT_FOUND\",\n      \"title\": \"Error occurred trying to create a new order\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"400"} value={"400"}><div>
 
 400 - Bad request
 
-</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"detail\": \"\",\n      \"status\": 400,\n      \"title\": \"Bad input request\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"401"} value={"401"}><div>
+</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"status\": 400,\n      \"detail\": \"\",\n      \"title\": \"Bad input request\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"401"} value={"401"}><div>
 
 401 - Unauthorized
 
-</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"detail\": \"\",\n      \"status\": 401,\n      \"title\": \"Authentication information is missing or invalid\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"404"} value={"404"}><div>
+</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"status\": 401,\n      \"detail\": \"\",\n      \"title\": \"Authentication information is missing or invalid\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"404"} value={"404"}><div>
 
 404 - Not found
 
-</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"detail\": \"\",\n      \"status\": 404,\n      \"title\": \"Not Found\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"5XX"} value={"5XX"}><div>
+</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"status\": 404,\n      \"detail\": \"\",\n      \"title\": \"Not Found\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"5XX"} value={"5XX"}><div>
 
 500 - Unknown error
 
-</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"detail\": \"\",\n      \"status\": 500,\n      \"title\": \"Unknown error\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div>
+</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"status\": 500,\n      \"detail\": \"\",\n      \"title\": \"Unknown error\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div>
       
