Fix for broken link in checkout UI

--- a/docs/bonsai-ui/checkout/index.mdx
+++ b/docs/bonsai-ui/checkout/index.mdx
@@ -106,7 +106,7 @@ curl 'https://carts.shopbonsai.ca/submit' \
 ```
 
 :::info
-You can find more information about how to create and update carts using the `Bonsai Carts API` [here](/docs/api/carts).
+You can find more information about how to create and update carts using the `Bonsai Carts API` [here](/docs/api/carts/carts-api).
 :::
 
 ### Step 4: Redirect to checkout
