more precise EOL

--- a/docs/bonsai-ui/introduction.mdx
+++ b/docs/bonsai-ui/introduction.mdx
@@ -8,7 +8,7 @@ sidebar_position: 1
 
 Currently, we support the following integrations:
 
-- [Express Checkout](/docs/bonsai-ui/express-checkout) <span className="label-warning">End of Life: 2023</span>
+- [Express Checkout](/docs/bonsai-ui/express-checkout) <span className="label-warning">End of Life: Q3 2023</span>
   - Single product checkout
 - [Bonsai Checkout](/docs/bonsai-ui/checkout) <span className="label-success">NEW</span>
   - Multi-product checkout
